update content on home page and about page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,16 +43,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p>
         Hi. Welcome to my personal website and blog. This site gives an overview
         of who I am and what I do. Overall, I'm a person with varied interests.
-        I'm a musician. I'm a writer. I'm a web developer.
+        For the most part, I'm a musician, a writer, and a web developer.
       </p>
       <p>
-        You can
+        If you're interested in connecting or working together, you can
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
           href="mailto: davelongdev@gmail.com"
         >
-          email
-        </LinkButton> me for more info.
+          email me
+        </LinkButton> for more info or reach out to me on social media.
       </p>
       {
         // only display if at least one social link is enabled
