add and style headshots

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           ></path><circle cx="6" cy="18" r="2"></circle>
         </svg>
       </a>
-
+      <div class="flex justify-center">
+        <img
+          class="mb-8 mt-2 w-96 rounded-2xl"
+          src="../../public/assets/headshot.webp"
+          alt="Headshot"
+        />
+      </div>
       <p>
         Hi. Welcome to my personal website and blog. This site gives an overview
         of who I am and what I do. Overall, I'm a person with varied interests.
