update path to images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <div class="flex justify-center">
         <img
           class="mb-8 mt-2 w-96 rounded-2xl"
-          src="../../public/assets/headshot.webp"
+          src="../../src/images/headshot.webp"
           alt="Headshot"
         />
       </div>
