update headshot paths again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,11 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </svg>
       </a>
       <div class="flex justify-center">
-        <img
-          class="mb-8 mt-2 w-96 rounded-2xl"
-          src="../../src/images/headshot.webp"
-          alt="Headshot"
-        />
+        <img class="mb-8 mt-2 w-96 rounded-2xl" src={headshot} alt="Headshot" />
       </div>
       <p>
         Hi. Welcome to my personal website and blog. This site gives an overview
